@@ -5,8 +5,6 @@ import com.baomidou.mybatisplus.core.conditions.update.*;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.begcode.monolith.domain.ResourceCategory;
-import com.begcode.monolith.domain.UploadFile;
-import com.begcode.monolith.domain.UploadImage;
 import com.begcode.monolith.repository.ResourceCategoryRepository;
 import com.begcode.monolith.service.dto.ResourceCategoryDTO;
 import com.begcode.monolith.service.mapper.ResourceCategoryMapper;
@@ -14,7 +12,6 @@ import com.diboot.core.binding.Binder;
 import com.diboot.core.service.impl.BaseServiceImpl;
 import com.google.common.base.CaseFormat;
 import java.util.*;
-import java.util.Arrays;
 import org.apache.commons.collections4.CollectionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,18 +24,19 @@ import org.springframework.transaction.annotation.Transactional;
 /**
  * Service Implementation for managing {@link com.begcode.monolith.domain.ResourceCategory}.
  */
+@SuppressWarnings("UnusedReturnValue")
 public class ResourceCategoryBaseService<R extends ResourceCategoryRepository, E extends ResourceCategory>
     extends BaseServiceImpl<ResourceCategoryRepository, ResourceCategory> {
 
     private final Logger log = LoggerFactory.getLogger(ResourceCategoryBaseService.class);
 
-    private final List<String> relationCacheNames = Arrays.asList(
+    private final List<String> relationCacheNames = List.of(
         com.begcode.monolith.domain.ResourceCategory.class.getName() + ".parent",
         com.begcode.monolith.domain.ResourceCategory.class.getName() + ".children",
         com.begcode.monolith.domain.UploadImage.class.getName() + ".category",
         com.begcode.monolith.domain.UploadFile.class.getName() + ".category"
     );
-    private final List<String> relationNames = Arrays.asList("children", "parent", "images", "files");
+    private final List<String> relationNames = List.of("children", "parent", "images", "files");
 
     protected final ResourceCategoryRepository resourceCategoryRepository;
 
@@ -81,11 +79,11 @@ public class ResourceCategoryBaseService<R extends ResourceCategoryRepository, E
     @Transactional(rollbackFor = Exception.class)
     public ResourceCategoryDTO update(ResourceCategoryDTO resourceCategoryDTO) {
         log.debug("Request to update ResourceCategory : {}", resourceCategoryDTO);
-
         ResourceCategory resourceCategory = resourceCategoryMapper.toEntity(resourceCategoryDTO);
+        clearChildrenCache();
 
-        resourceCategoryRepository.updateById(resourceCategory);
-        return findOne(resourceCategoryDTO.getId()).orElseThrow();
+        this.saveOrUpdate(resourceCategory);
+        return findOne(resourceCategory.getId()).orElseThrow();
     }
 
     /**
@@ -130,8 +128,7 @@ public class ResourceCategoryBaseService<R extends ResourceCategoryRepository, E
      */
     public Optional<ResourceCategoryDTO> findOne(Long id) {
         log.debug("Request to get ResourceCategory : {}", id);
-        return Optional
-            .ofNullable(resourceCategoryRepository.selectById(id))
+        return Optional.ofNullable(resourceCategoryRepository.selectById(id))
             .map(resourceCategory -> {
                 Binder.bindRelations(resourceCategory);
                 return resourceCategory;
@@ -167,23 +164,25 @@ public class ResourceCategoryBaseService<R extends ResourceCategoryRepository, E
         if (CollectionUtils.isNotEmpty(fieldNames)) {
             UpdateWrapper<ResourceCategory> updateWrapper = new UpdateWrapper<>();
             updateWrapper.in("id", ids);
-            fieldNames.forEach(fieldName ->
-                updateWrapper.set(
-                    CaseFormat.LOWER_CAMEL.to(CaseFormat.LOWER_UNDERSCORE, fieldName),
-                    BeanUtil.getFieldValue(changeResourceCategoryDTO, fieldName)
-                )
+            fieldNames.forEach(
+                fieldName ->
+                    updateWrapper.set(
+                        CaseFormat.LOWER_CAMEL.to(CaseFormat.LOWER_UNDERSCORE, fieldName),
+                        BeanUtil.getFieldValue(changeResourceCategoryDTO, fieldName)
+                    )
             );
             this.update(updateWrapper);
         } else if (CollectionUtils.isNotEmpty(relationshipNames)) {
             List<ResourceCategory> resourceCategoryList = this.listByIds(ids);
             if (CollectionUtils.isNotEmpty(resourceCategoryList)) {
                 resourceCategoryList.forEach(resourceCategory -> {
-                    relationshipNames.forEach(relationName ->
-                        BeanUtil.setFieldValue(
-                            resourceCategory,
-                            relationName,
-                            BeanUtil.getFieldValue(resourceCategoryMapper.toEntity(changeResourceCategoryDTO), relationName)
-                        )
+                    relationshipNames.forEach(
+                        relationName ->
+                            BeanUtil.setFieldValue(
+                                resourceCategory,
+                                relationName,
+                                BeanUtil.getFieldValue(resourceCategoryMapper.toEntity(changeResourceCategoryDTO), relationName)
+                            )
                     );
                     this.createOrUpdateAndRelatedRelations(resourceCategory, relationshipNames);
                 });
