@@ -21,7 +21,6 @@ import com.diboot.core.vo.LabelValue;
 import com.google.common.base.CaseFormat;
 import java.util.*;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Objects;
@@ -40,12 +39,13 @@ import org.springframework.transaction.annotation.Transactional;
 /**
  * Service Implementation for managing {@link com.begcode.monolith.settings.domain.Dictionary}.
  */
+@SuppressWarnings("UnusedReturnValue")
 public class DictionaryBaseService<R extends DictionaryRepository, E extends Dictionary>
     extends BaseServiceImpl<DictionaryRepository, Dictionary>
     implements DictionaryServiceExtProvider {
 
     private final Logger log = LoggerFactory.getLogger(DictionaryBaseService.class);
-    private final List<String> relationNames = Arrays.asList("items");
+    private final List<String> relationNames = List.of("items");
 
     protected final DictionaryRepository dictionaryRepository;
 
@@ -89,17 +89,16 @@ public class DictionaryBaseService<R extends DictionaryRepository, E extends Dic
     @Transactional(rollbackFor = Exception.class)
     public DictionaryDTO update(DictionaryDTO dictionaryDTO) {
         log.debug("Request to update Dictionary : {}", dictionaryDTO);
-
         Dictionary dictionary = dictionaryMapper.toEntity(dictionaryDTO);
 
-        this.updateEntityAndRelatedEntities(
+        this.createEntityAndRelatedEntities(
                 dictionary,
                 dictionary.getItems(),
                 CommonFieldData::setOwnerEntityId,
                 CommonFieldData::setOwnerEntityName,
                 "Dictionary"
             );
-        return findOne(dictionaryDTO.getId()).orElseThrow();
+        return findOne(dictionary.getId()).orElseThrow();
     }
 
     /**
@@ -144,8 +143,7 @@ public class DictionaryBaseService<R extends DictionaryRepository, E extends Dic
      */
     public Optional<DictionaryDTO> findOne(Long id) {
         log.debug("Request to get Dictionary : {}", id);
-        return Optional
-            .ofNullable(dictionaryRepository.selectById(id))
+        return Optional.ofNullable(dictionaryRepository.selectById(id))
             .map(dictionary -> {
                 Binder.bindRelations(dictionary);
                 return dictionary;
@@ -285,23 +283,25 @@ public class DictionaryBaseService<R extends DictionaryRepository, E extends Dic
         if (CollectionUtils.isNotEmpty(fieldNames)) {
             UpdateWrapper<Dictionary> updateWrapper = new UpdateWrapper<>();
             updateWrapper.in("id", ids);
-            fieldNames.forEach(fieldName ->
-                updateWrapper.set(
-                    CaseFormat.LOWER_CAMEL.to(CaseFormat.LOWER_UNDERSCORE, fieldName),
-                    BeanUtil.getFieldValue(changeDictionaryDTO, fieldName)
-                )
+            fieldNames.forEach(
+                fieldName ->
+                    updateWrapper.set(
+                        CaseFormat.LOWER_CAMEL.to(CaseFormat.LOWER_UNDERSCORE, fieldName),
+                        BeanUtil.getFieldValue(changeDictionaryDTO, fieldName)
+                    )
             );
             this.update(updateWrapper);
         } else if (CollectionUtils.isNotEmpty(relationshipNames)) {
             List<Dictionary> dictionaryList = this.listByIds(ids);
             if (CollectionUtils.isNotEmpty(dictionaryList)) {
                 dictionaryList.forEach(dictionary -> {
-                    relationshipNames.forEach(relationName ->
-                        BeanUtil.setFieldValue(
-                            dictionary,
-                            relationName,
-                            BeanUtil.getFieldValue(dictionaryMapper.toEntity(changeDictionaryDTO), relationName)
-                        )
+                    relationshipNames.forEach(
+                        relationName ->
+                            BeanUtil.setFieldValue(
+                                dictionary,
+                                relationName,
+                                BeanUtil.getFieldValue(dictionaryMapper.toEntity(changeDictionaryDTO), relationName)
+                            )
                     );
                     this.createOrUpdateAndRelatedRelations(dictionary, relationshipNames);
                 });
@@ -326,122 +326,119 @@ public class DictionaryBaseService<R extends DictionaryRepository, E extends Dic
         SortValueOperateType type
     ) {
         switch (type) {
-            case VALUE:
-                {
-                    if (ObjectUtils.isNotEmpty(changeSortValue)) {
-                        return lambdaUpdate().set(Dictionary::getSortValue, changeSortValue).eq(Dictionary::getId, id).update();
-                    } else {
-                        return false;
-                    }
+            case VALUE: {
+                if (ObjectUtils.isNotEmpty(changeSortValue)) {
+                    return lambdaUpdate().set(Dictionary::getSortValue, changeSortValue).eq(Dictionary::getId, id).update();
+                } else {
+                    return false;
                 }
-            case STEP:
-                {
-                    if (ObjectUtils.allNotNull(id, beforeId)) {
-                        Set<Long> ids = new HashSet<>();
-                        ids.add(id);
-                        ids.add(beforeId);
-                        Map<Long, Integer> idSortValueMap = listByIds(ids)
-                            .stream()
-                            .filter(dictionary -> dictionary.getSortValue() != null)
-                            .collect(Collectors.toMap(Dictionary::getId, Dictionary::getSortValue));
-                        return (
-                            lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(beforeId)).eq(Dictionary::getId, id).update() &&
-                            lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(id)).eq(Dictionary::getId, beforeId).update()
-                        );
-                    } else if (ObjectUtils.allNotNull(id, afterId)) {
-                        Set<Long> ids = new HashSet<>();
-                        ids.add(id);
-                        ids.add(afterId);
-                        Map<Long, Integer> idSortValueMap = listByIds(ids)
-                            .stream()
-                            .filter(dictionary -> dictionary.getSortValue() != null)
-                            .collect(Collectors.toMap(Dictionary::getId, Dictionary::getSortValue));
-                        return (
-                            lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(afterId)).eq(Dictionary::getId, id).update() &&
-                            lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(id)).eq(Dictionary::getId, afterId).update()
-                        );
-                    } else {
-                        return false;
-                    }
-                }
-            case DROP:
-                {
+            }
+            case STEP: {
+                if (ObjectUtils.allNotNull(id, beforeId)) {
                     Set<Long> ids = new HashSet<>();
                     ids.add(id);
-                    if (ObjectUtils.isNotEmpty(beforeId)) {
-                        ids.add(beforeId);
-                    }
-                    if (ObjectUtils.isNotEmpty(afterId)) {
-                        ids.add(afterId);
-                    }
+                    ids.add(beforeId);
                     Map<Long, Integer> idSortValueMap = listByIds(ids)
                         .stream()
                         .filter(dictionary -> dictionary.getSortValue() != null)
                         .collect(Collectors.toMap(Dictionary::getId, Dictionary::getSortValue));
-                    if (ObjectUtils.allNotNull(beforeId, afterId)) {
-                        // 计算中间值
-                        Integer beforeSortValue = idSortValueMap.get(beforeId);
-                        Integer afterSortValue = idSortValueMap.get(afterId);
-                        Integer newSortValue = (beforeSortValue + afterSortValue) / 2;
-                        if (!newSortValue.equals(afterSortValue) && !newSortValue.equals(beforeSortValue)) {
-                            // 正常值，保存到数据库。
-                            return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
-                        } else {
-                            // 没有排序值插入空间了，重新对相关的所有记录的排序值进行计算。然后再插入相关的值。
-                            // 需要确定相应的记录范围
-                            List<Dictionary> list = this.list(queryWrapper.orderByAsc("sort_value"));
-                            Integer newBeforeSortValue = 0;
-                            Integer newAfterSortValue = 0;
-                            for (int i = 0; i < list.size(); i++) {
-                                list.get(i).setSortValue(100 * (i + 1));
-                                if (afterId.equals(list.get(i).getId())) {
-                                    newBeforeSortValue = list.get(i).getSortValue();
-                                }
-                                if (beforeId.equals(list.get(i).getId())) {
-                                    newAfterSortValue = list.get(i).getSortValue();
-                                }
-                            }
-                            newSortValue = (newBeforeSortValue + newAfterSortValue) / 2;
-                            updateBatchById(list);
-                            return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
-                        }
-                    } else if (ObjectUtils.isNotEmpty(beforeId)) {
-                        // 计算比beforeId实体大的排序值
-                        Integer beforeSortValue = idSortValueMap.get(beforeId);
-                        Integer newSortValue = (beforeSortValue + 100) - ((beforeSortValue + 100) % 100);
+                    return (
+                        lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(beforeId)).eq(Dictionary::getId, id).update() &&
+                        lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(id)).eq(Dictionary::getId, beforeId).update()
+                    );
+                } else if (ObjectUtils.allNotNull(id, afterId)) {
+                    Set<Long> ids = new HashSet<>();
+                    ids.add(id);
+                    ids.add(afterId);
+                    Map<Long, Integer> idSortValueMap = listByIds(ids)
+                        .stream()
+                        .filter(dictionary -> dictionary.getSortValue() != null)
+                        .collect(Collectors.toMap(Dictionary::getId, Dictionary::getSortValue));
+                    return (
+                        lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(afterId)).eq(Dictionary::getId, id).update() &&
+                        lambdaUpdate().set(Dictionary::getSortValue, idSortValueMap.get(id)).eq(Dictionary::getId, afterId).update()
+                    );
+                } else {
+                    return false;
+                }
+            }
+            case DROP: {
+                Set<Long> ids = new HashSet<>();
+                ids.add(id);
+                if (ObjectUtils.isNotEmpty(beforeId)) {
+                    ids.add(beforeId);
+                }
+                if (ObjectUtils.isNotEmpty(afterId)) {
+                    ids.add(afterId);
+                }
+                Map<Long, Integer> idSortValueMap = listByIds(ids)
+                    .stream()
+                    .filter(dictionary -> dictionary.getSortValue() != null)
+                    .collect(Collectors.toMap(Dictionary::getId, Dictionary::getSortValue));
+                if (ObjectUtils.allNotNull(beforeId, afterId)) {
+                    // 计算中间值
+                    Integer beforeSortValue = idSortValueMap.get(beforeId);
+                    Integer afterSortValue = idSortValueMap.get(afterId);
+                    Integer newSortValue = (beforeSortValue + afterSortValue) / 2;
+                    if (!newSortValue.equals(afterSortValue) && !newSortValue.equals(beforeSortValue)) {
                         // 正常值，保存到数据库。
                         return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
-                    } else if (ObjectUtils.isNotEmpty(afterId)) {
-                        // 计算比afterId实体小的排序值
-                        Integer afterSortValue = idSortValueMap.get(afterId);
-                        Integer newSortValue = (afterSortValue - 100) - ((afterSortValue - 100) % 100);
-                        if (newSortValue <= 0) {
-                            // 没有排序值插入空间了，重新对相关的所有记录的排序值进行计算。然后再插入相关的值。
-                            // 需要确定相应的记录范围
-                            List<Dictionary> list = this.list(queryWrapper.orderByAsc("sort_value"));
-                            Integer newBeforeSortValue = 0;
-                            Integer newAfterSortValue = 0;
-                            for (int i = 0; i < list.size(); i++) {
-                                list.get(i).setSortValue(100 * (i + 1));
-                                if (afterId.equals(list.get(i).getId())) {
-                                    newBeforeSortValue = list.get(i).getSortValue();
-                                }
-                                if (beforeId.equals(list.get(i).getId())) {
-                                    newAfterSortValue = list.get(i).getSortValue();
-                                }
-                            }
-                            newSortValue = (newBeforeSortValue + newAfterSortValue) / 2;
-                            updateBatchById(list);
-                            return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
-                        } else {
-                            // 正常值，保存到数据库。
-                            return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
-                        }
                     } else {
-                        // todo 异常
-                        return false;
+                        // 没有排序值插入空间了，重新对相关的所有记录的排序值进行计算。然后再插入相关的值。
+                        // 需要确定相应的记录范围
+                        List<Dictionary> list = this.list(queryWrapper.orderByAsc("sort_value"));
+                        Integer newBeforeSortValue = 0;
+                        Integer newAfterSortValue = 0;
+                        for (int i = 0; i < list.size(); i++) {
+                            list.get(i).setSortValue(100 * (i + 1));
+                            if (afterId.equals(list.get(i).getId())) {
+                                newBeforeSortValue = list.get(i).getSortValue();
+                            }
+                            if (beforeId.equals(list.get(i).getId())) {
+                                newAfterSortValue = list.get(i).getSortValue();
+                            }
+                        }
+                        newSortValue = (newBeforeSortValue + newAfterSortValue) / 2;
+                        updateBatchById(list);
+                        return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
                     }
+                } else if (ObjectUtils.isNotEmpty(beforeId)) {
+                    // 计算比beforeId实体大的排序值
+                    Integer beforeSortValue = idSortValueMap.get(beforeId);
+                    Integer newSortValue = (beforeSortValue + 100) - ((beforeSortValue + 100) % 100);
+                    // 正常值，保存到数据库。
+                    return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
+                } else if (ObjectUtils.isNotEmpty(afterId)) {
+                    // 计算比afterId实体小的排序值
+                    Integer afterSortValue = idSortValueMap.get(afterId);
+                    Integer newSortValue = (afterSortValue - 100) - ((afterSortValue - 100) % 100);
+                    if (newSortValue <= 0) {
+                        // 没有排序值插入空间了，重新对相关的所有记录的排序值进行计算。然后再插入相关的值。
+                        // 需要确定相应的记录范围
+                        List<Dictionary> list = this.list(queryWrapper.orderByAsc("sort_value"));
+                        Integer newBeforeSortValue = 0;
+                        Integer newAfterSortValue = 0;
+                        for (int i = 0; i < list.size(); i++) {
+                            list.get(i).setSortValue(100 * (i + 1));
+                            if (afterId.equals(list.get(i).getId())) {
+                                newBeforeSortValue = list.get(i).getSortValue();
+                            }
+                            if (beforeId.equals(list.get(i).getId())) {
+                                newAfterSortValue = list.get(i).getSortValue();
+                            }
+                        }
+                        newSortValue = (newBeforeSortValue + newAfterSortValue) / 2;
+                        updateBatchById(list);
+                        return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
+                    } else {
+                        // 正常值，保存到数据库。
+                        return lambdaUpdate().set(Dictionary::getSortValue, newSortValue).eq(Dictionary::getId, id).update();
+                    }
+                } else {
+                    // todo 异常
+                    return false;
                 }
+            }
             default:
                 return false;
         }
